--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "next"
-  
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "next": "^7.0.2",
+    "nprogress": "^0.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
   }
